# ConvexHull_FX-9860G

./: .gitignore  CMakeLists.txt
include/: args.h  circleq.h  convexhull.h  generation.h  graphics.h  scenes.h  utils.h
src/: convexhull.c  generation.c  graphics.c  main.c  scenes.c
